--------------------------------------------------------------------------------
drkns 29.07.2021 19:41:27 +0100 - build 5859

1. Fix a potential crash at exit.

2. Continue 5845.6 - do not populate FarDialogItem.ListItems in DN_DRAWDLGITEM.

--------------------------------------------------------------------------------
drkns 26.07.2021 17:27:54 +0100 - build 5858

1. Correction of 5855.

--------------------------------------------------------------------------------
drkns 25.07.2021 22:56:46 +0100 - build 5857

1. Correction of 5852.1.

--------------------------------------------------------------------------------
drkns 25.07.2021 20:02:30 +0100 - build 5856

1. Correction of 5852.2.

--------------------------------------------------------------------------------
drkns 25.07.2021 19:40:43 +0100 - build 5855

1. Copy progress is a real dialog now. Yay.

--------------------------------------------------------------------------------
drkns 23.07.2021 01:41:38 +0100 - build 5854

1. Set console input mode in a smarter way.

--------------------------------------------------------------------------------
drkns 22.07.2021 19:50:21 +0100 - build 5853

1. Reduce CPU load in the log viewer.

--------------------------------------------------------------------------------
drkns 20.07.2021 17:48:06 +0100 - build 5852

1. gh-425 Incorrect file sizes shown/calculated for files compressed with LZX

2. Continue 5850.

--------------------------------------------------------------------------------
drkns 20.07.2021 02:38:36 +0100 - build 5851

1. Rework and simplify Delete/Wipe/Recycle dialog localisation.

--------------------------------------------------------------------------------
drkns 19.07.2021 22:08:39 +0100 - build 5850

1. Experimental: removed fake dialogs and preredraw magic from editor load/save/find progress bars.

--------------------------------------------------------------------------------
drkns 13.07.2021 20:22:19 +0100 - build 5849
