@@ -450,16 +450,13 @@ public:
 		string Data;
 	};
 
-	template<typename type>
 	[[nodiscard]]
-	auto Enumerator(unsigned int HistoryType, type&& HistoryName, bool Reverse = false)
+	auto Enumerator(unsigned int const HistoryType, string_view const HistoryName, string_view const ItemName = {}, bool const Reverse = false)
 	{
-		static_assert(std::is_convertible_v<type, string_view>);
-
 		using value_type = enum_data;
-		return make_inline_enumerator<value_type>([this, HistoryType, HistoryName = keep_alive(FWD(HistoryName)), Reverse](const bool Reset, value_type& Value)
+		return make_inline_enumerator<value_type>([&](const bool Reset, value_type& Value)
 		{
-			return Enum(Reset, HistoryType, HistoryName.get(), Value.Id, Value.Name, Value.Type, Value.Lock, Value.Time, Value.Uuid, Value.File, Value.Data, Reverse);
+			return Enum(Reset, HistoryType, HistoryName, ItemName, Value.Id, Value.Name, Value.Type, Value.Lock, Value.Time, Value.Uuid, Value.File, Value.Data, Reverse);
 		},
 		[this, Reverse]
 		{
@@ -487,7 +484,7 @@ protected:
 private:
 	//command,view,edit,folder,dialog history
 	[[nodiscard]]
-	virtual bool Enum(bool Reset, unsigned int TypeHistory, string_view HistoryName, unsigned long long& id, string& strName, history_record_type& Type, bool& Lock, os::chrono::time_point& Time, string& strUuid, string& strFile, string& strData, bool Reverse) = 0;
+	virtual bool Enum(bool Reset, unsigned int TypeHistory, string_view HistoryName, string_view ItemName, unsigned long long& id, string& strName, history_record_type& Type, bool& Lock, os::chrono::time_point& Time, string& strUuid, string& strFile, string& strData, bool Reverse) = 0;
 	virtual void CloseEnum(bool Reverse) const = 0;
 	[[nodiscard]]
 	virtual bool EnumLargeHistories(bool Reset, unsigned int TypeHistory, int MinimumEntries, string& strHistoryName) = 0;
