@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 29.07.2021 23:04:52 +0100 - build 5860
+
+1. Optimise adding items to history.
+
+--------------------------------------------------------------------------------
 drkns 29.07.2021 19:41:27 +0100 - build 5859
 
 1. Fix a potential crash at exit.
